phase2_Dev/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the data conversion batch to convert GSA, R&amp;P Contacts to ContactRoles</description>
        <label>Contact Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EEC_Legacy_Contact_ID__c</fullName>
        <description>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</description>
        <externalId>true</externalId>
        <inlineHelpText>The External ID value as used in Licensing Manager (or other external feeder systems) for managing UPSERTS into LEAD</inlineHelpText>
        <label>EEC Legacy Contact ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Logged_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Logged In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Holds_FCC_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Contact hold a Family Child Care license?</description>
        <inlineHelpText>Does Contact hold a Family Child Care license?</inlineHelpText>
        <label>Holds FCC License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Foster_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Foster Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the contact is on the Legacy Provider imported from LM system</description>
        <label>Is Legacy Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_text__c</fullName>
        <formula>Text(Salutation) +&apos; &apos;+ FirstName + &apos; &apos;+ LastName</formula>
        <label>Name_text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Qualification_Reg_Number__c</fullName>
        <inlineHelpText>Professional Qualification Registry Number</inlineHelpText>
        <label>Prof. Qualification Reg. Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Program Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Designee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact / Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact / Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant / Toddler Responsible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Required for FCC, LG and SG license applications</description>
        <label>Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FCC_Assistant_Contact_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account.RecordType.Name = &quot;Family Child Care&quot;, NOT( Account.AccountRecord_Type_Hidden__c = &quot;FCC Assistant&quot;) , 
TEXT(Role__c) = &quot;Main Contact / Assistant&quot;, NOT (Account.Allow_Renewal_as_Assistant__c) )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Not a valid role for the Assistant type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FCC_Provider_Contact_Role</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Account.RecordType.Name = &quot;Family Child Care&quot;, 
TEXT(Role__c) = &quot;Main Contact / Assistant&quot;, NOT (Account.Allow_Renewal_as_Assistant__c) )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Not a valid role for the Provider type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSA_and_RP_providers_no_role_on_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( AccountId ))

&amp;&amp;

NOT(ISPICKVAL( Role__c, &quot;&quot;))

&amp;&amp;

NOT(ISPICKVAL( Account.Provider_Status__c , &quot;Attended to PPM Meeting&quot;))

&amp;&amp;

NOT(DATEVALUE(Account.CreatedDate)  =  TODAY())

&amp;&amp;

OR(
 Account.Is_R_P__c = TRUE,
 Account.Is_GSA__c = TRUE
)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Contacts associated to GSA or R&amp;P Providers do not have Role assigned here (go to Provider Page and select &quot;Contact Role&quot;)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Role_Mand_if_Prov_is_FCC_or_FCCAsst</fullName>
        <active>true</active>
        <description>Role is mandatory if associated provider is an FCC Provider or FCC Assistant</description>
        <errorConditionFormula>NOT(ISBLANK( AccountId ) )

&amp;&amp;

OR(
Account.RecordType.Name = &quot;Family Child Care&quot;,
Account.RecordType.Name = &quot;FCC Assistant&quot;
)

&amp;&amp;

ISPICKVAL( Role__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Role is mandatory if associated Provider is an FCC Provider or FCC Assistant</errorMessage>
    </validationRules>
</CustomObject>